--- a/kadai008/kadai_008.html
+++ b/kadai008/kadai_008.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>8章課題</title>
-        <meta name="description"content=このページは8章の課題です>
-        <mata charset="utf-8">
+        <meta name="description"content=このページは8章の課題です。”>
+        <meta charset="utf-8">
        </head>
     <header>   
     <h1>SAMURAIニュース</h1>
      <nav>
-        <a href="layout.html">ホーム</a>
+        <a href="https://www.sejuku.net/">ホーム</a>
         <a href="https://www.sejuku.net/">社会</a>
         <a href="https://www.sejuku.net/">経済</a>
         <a href="https://www.sejuku.net/">スポーツ</a>
@@ -59,11 +59,14 @@
         </section>
      </article>
      <article>
+      <section>
       <h2>テクノロジー</h2>
       <h3>SAMURAIが新しい動画をリリース</h3>
       <p>SAMURAI公式YouTubeで新しい動画がリリースされました。<br> 動画の内容はHTML/CSSの解説です。</p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/2JLiGSUohEo?si=hIKkG4oa6-NePda-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-     </article>
+      </section>
+    </article>
+
     </main>
     <footer>
       <p>&copy; SAMURAIニュース</p>
