--- a/kadai008/kadai_008.html
+++ b/kadai008/kadai_008.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <body>
     <head>
         <title>8章課題</title>
         <meta name="description"content=このページは8章の課題です。”>
@@ -72,4 +73,5 @@
     <footer>
       <p>&copy; SAMURAIニュース</p>
     </footer>
+    </body>
 </html>
